[gd_scene load_steps=8 format=3 uid="uid://d3is55tcqbxq1"]

[ext_resource type="Script" path="res://scripts/gameLogic.gd" id="1_wr3hi"]
[ext_resource type="PackedScene" uid="uid://brhjt7414n14j" path="res://scenes/player.tscn" id="1_y3oaw"]
[ext_resource type="PackedScene" uid="uid://cgjlx2yxxxtw0" path="res://scenes/ball.tscn" id="2_odkac"]
[ext_resource type="Script" path="res://scripts/ball.gd" id="3_kdosc"]
[ext_resource type="PackedScene" uid="uid://dlluawcfnnqsu" path="res://scenes/ui.tscn" id="5_70kon"]
[ext_resource type="PackedScene" uid="uid://b0f0xp8r1f6lc" path="res://scenes/player2.tscn" id="6_nlwoj"]

[sub_resource type="RectangleShape2D" id="RectangleShape2D_wg0bu"]
size = Vector2(1280.25, 20)

[node name="gameScene" type="Node2D"]
script = ExtResource("1_wr3hi")

[node name="Player" parent="." instance=ExtResource("1_y3oaw")]
position = Vector2(128, 360)
collision_mask = 2
motion_mode = 1
slide_on_ceiling = false

[node name="Ball" parent="." instance=ExtResource("2_odkac")]
position = Vector2(640, 360)
collision_layer = 4
collision_mask = 3
script = ExtResource("3_kdosc")

[node name="Walls" type="Node" parent="."]

[node name="WallUp" type="StaticBody2D" parent="Walls"]
collision_layer = 2
collision_mask = 5

[node name="CollisionShape2D" type="CollisionShape2D" parent="Walls/WallUp"]
position = Vector2(640.875, -10)
shape = SubResource("RectangleShape2D_wg0bu")

[node name="WallDown" type="StaticBody2D" parent="Walls"]
collision_layer = 2
collision_mask = 5

[node name="CollisionShape2D" type="CollisionShape2D" parent="Walls/WallDown"]
position = Vector2(641, 730)
shape = SubResource("RectangleShape2D_wg0bu")

[node name="WallLeft" type="StaticBody2D" parent="Walls"]
collision_layer = 2
collision_mask = 5

[node name="CollisionShape2D" type="CollisionShape2D" parent="Walls/WallLeft"]
position = Vector2(-20, 379)
scale = Vector2(0.03, 40)
shape = SubResource("RectangleShape2D_wg0bu")

[node name="WallRight" type="StaticBody2D" parent="Walls"]
collision_layer = 2
collision_mask = 5

[node name="CollisionShape2D" type="CollisionShape2D" parent="Walls/WallRight"]
position = Vector2(1301, 377)
scale = Vector2(0.03, 40)
shape = SubResource("RectangleShape2D_wg0bu")

[node name="Ui" parent="." instance=ExtResource("5_70kon")]
custom_minimum_size = Vector2(1280, 730)
anchors_preset = 5
anchor_left = 0.5
anchor_right = 0.5
anchor_bottom = 0.0
offset_right = 1280.0
offset_bottom = 730.0
grow_vertical = 1
size_flags_horizontal = 4
size_flags_vertical = 4

[node name="Player2" parent="." instance=ExtResource("6_nlwoj")]
position = Vector2(1152, 360)
collision_mask = 2
